--- a/_assets/scss/partials/layout/_footer.scss
+++ b/_assets/scss/partials/layout/_footer.scss
@@ -6,9 +6,9 @@
 	display: block;
 	text-align: center;
 	font-size: 1.1rem;
-	color: #fff;
+	color: $paper;
 	background: $bgcolor url("/assets/img/footprints1.png") repeat-x;
-	min-height: 4.0625rem;
+	// min-height: 4.0625rem;
 	padding: 1rem;
 }
 
