--- a/_assets/scss/partials/layout/_jPushMenu.scss
+++ b/_assets/scss/partials/layout/_jPushMenu.scss
@@ -2,7 +2,7 @@
 =            jquery jPushMenu css            =
 ===========================================*/
 
-@media screen and (max-width: 653px) {
+@media screen and (max-width: 700px) { /* controls at what px width the full menu displays */
 
     /* General styles for all menus */
     .cbp-spmenu {
