--- a/_assets/scss/partials/layout/_nav_basic.scss
+++ b/_assets/scss/partials/layout/_nav_basic.scss
@@ -42,7 +42,7 @@
 // 			}
 // 		}
 // 		.active {
-// 			background-color: #FFF;
+// 			background-color: #fff;
 // 			color: $acolor;
 // 			text-transform: uppercase;
 // 			// border: 1px solid white;
