--- a/_assets/scss/partials/layout/_post.scss
+++ b/_assets/scss/partials/layout/_post.scss
@@ -13,7 +13,7 @@
 }
 
 .post__content {
-	background-color: #FFF;
+	background-color: #fff;
 	max-width: 37.5rem;
 	margin: 0 auto;
 	padding: 0 1rem;
@@ -23,7 +23,7 @@
 
 blockquote {
 	color: $acolor;
-	background-color: #FFF;
+	background-color: #fff;
 	padding: 1rem;
 	border-top: 1px solid $acolor;
 	border-bottom: 1px solid $acolor;
