--- a/_assets/scss/partials/modules/_card_borrowed.scss
+++ b/_assets/scss/partials/modules/_card_borrowed.scss
@@ -10,7 +10,7 @@
 }
 
 .card {
-    background:#FFF;
+    background:#fff;
     border:1px solid #AAA;
     border-bottom:3px solid #BBB;
     padding:0px;
