--- a/_assets/scss/partials/utils/_utils.scss
+++ b/_assets/scss/partials/utils/_utils.scss
@@ -64,7 +64,14 @@
 }
 
 
-
+.grit {
+   -webkit-mask-image: url("/assets/img/mytexture6.png");
+   mask-image: url("/assets/img/mytexture6.png");
+   // -webkit-mask-repeat: repeat-x;
+   // mask-repeat: repeat-x;
+   // -webkit-mask-clip: border;
+   // -webkit-mask-origin: border;
+}
 
 
 
