--- a/_includes/facebookshare.html
+++ b/_includes/facebookshare.html
@@ -6,3 +6,6 @@
   js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
+
+
+<!-- somehow this is creating the "Invalid App Id: Must be a number or numeric string representing the application id." error ... temporarily, it has been commented out of default.hmtl until it can be fixed -->
