--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <!-- HEADER - incl. MASTHEAD & MENU -->
 
-<header class="site__header">
+<header class="site__header grit">
 	<div class="container">
 		
 		<div class="masthead">
