--- a/_layouts/post_combo.html
+++ b/_layouts/post_combo.html
@@ -15,11 +15,11 @@ layout: default
 
 		<div class="clearfix">
 	  	<div class="titles" id="top">
-				<h2 class="post__title">{{ page.title }}</h2>
+				<h2 class="post__title grit">{{ page.title }}</h2>
 				<h2 class="post__excerpt">{{ page.excerpt }}</h4>
 				<h3 class="post__author">By <strong>{{ page.author }}</strong></h3>
 			</div>
-			<div class="post__img">
+			<div class="post__img grit">
 				<img src="{{ page.image }}" alt="{{ post.title }}">
 			</div>
 		</div>
