--- a/_assets/scss/partials/modules/_panel.scss
+++ b/_assets/scss/partials/modules/_panel.scss
@@ -9,7 +9,7 @@
 	border-top: 1px solid rgba(192,192,192,0.5);
 	border-left: 1px solid rgba(192,192,192,0.5);
 	box-shadow: 3px 3px 10px 2px rgba(139,0,0,0.25);
-	background-color: #FFF;
+	background-color: #fff;
 	margin: 2.5rem 0;
 	height: 250px;
 	.previewLabel {
