--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,8 +31,12 @@
 		<script src="/assets/js/vendor/nav.js"></script> -->
 
 		<script src="/assets/js/vendor/jquery-1.11.2.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
+
 
 		<script src="/assets/js/vendor/store.js"></script>
+
+		<!-- <script src="/assets/js/vendor/velocity.min.js"></script> -->
 
 
 		<!-- TYPEKIT -->
