--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -1,20 +1,21 @@
 <!-- MASTHEAD -->
 
-<header class="site__header">
-	<div class="container">
-		
-		<div class="masthead">
-			<div class="branding clearfix">
-				<a href="/">
-					<img src="/assets/img/logo2.png" alt="" class="logo">
-					<!-- <img class="logo" src="/assets/img/circle_crow_white.png" alt="Tales of Murder logo">
-					<h2 class="title">Tales of <span>Murder</span></h2>
-					<h3 class="tagline">for readers with <span>time to <em>kill</em>!</span></h3> -->
-				</a>
-			</div>
+<header class="site__header"> <!-- contains full width, resizing background image -->
+	<div class="container"> <!-- 960px width, centered content area -->
 
-			<div class="navicon toggle-menu menu-right">
+		<div class="masthead clearfix">
+
+			<img src="/assets/img/circle_crow_paper.png" alt="" class="masthead__logo grit">
+
+			<div class="branding">
+				<h2 class="masthead__title grit"><span class="title__sub">Tales of </span><span class="title__main"><span class="m">m</span><span class="urde">urde</span><span class="r">r</span></span></h2>
+
+				<h3 class="masthead__tagline">For readers with time to <span>kill</span> &hellip;</h3>
+			</div> <!-- end div .masthead-inner__test -->
+
+			<div class="navicon__test toggle-menu menu-right">
       	<i class="fa fa-navicon"></i>
     	</div>
-			
-		</div> <!-- end of div masthead
+
+		</div> <!-- end div .masthead__test -->
+
