--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,6 @@
 <!-- MAIN NAVIGATION MENU -->
 
-    <nav class="nav__primary cbp-spmenu cbp-spmenu-vertical cbp-spmenu-right">
+    <nav  class="nav__primary cbp-spmenu cbp-spmenu-vertical cbp-spmenu-right"> <!-- if {% if page.url == '/index.html' %} class="hidden" {% endif %} statement removes menu from home (eventually only WelcomeGate) page -->
       
       <h1 class="hidden">Main Navigation</h1>
       <div class="nav__basic">
@@ -9,8 +9,8 @@
         <a {% if page.url == '/about/index.html' %} class="active" {% endif %} href="/about/index.html">About</a>
         <a {% if page.url == '/short-stories/index.html' %} class="active" {% endif %} href="/short-stories/index.html">Short&nbsp;Stories</a>
         <a {% if page.url == '/book-catalog/index.html' %} class="active" {% endif %} href="/book-catalog/index.html">Book&nbsp;Catalog</a>
-        <a {% if page.url == '/the-red-file/index.html' %} class="active" {% endif %} href="/the-red-file/index.html">THE&nbsp;RED&nbsp;FILE</a>
-        <!-- <a {% if page.url == '/murderbook/index.html' %} class="active" {% endif %} href="/murderbook/index.html">MurderBook</a> -->
+        <a {% if page.url == '/the-red-file/index.html' %} class="active" {% endif %} href="/the-red-file/index.html">The&nbsp;Red&nbsp;File</a>
+        <!-- <a {% if page.url == '/murderwiki/index.html' %} class="active" {% endif %} href="/murderwiki/index.html">MurderWiki</a> -->
       </div> 
     </nav> <!-- nav__primary -->
 
