--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 
 <body {% if page.title %} id="{{ page.title }}"{% endif %} class="ipadBS">
 
-	{% include facebookshare.html %}
+	<!-- include facebookshare.html -->
 
 	{% include masthead.html %}
 	{% include navigation.html %}
