--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -47,18 +47,11 @@
 			<label for="email">Your Email Address&#58;&nbsp;<sup><i class="fa fa-lock"></i></sup></label>
 			<input type="email" name="_replyto">
 
-			<!-- <label for="awf_field-69865725" class="choice">YES! Also sign me up for the weekly <em>MurderBook</em> email newsletter&#58;</label> -->
-			<!--<input type="checkbox" value="yes" id="awf_field-69865725" class="checkbox"  name="custom e-radio" /> 
-			 <label class="choice" for="awf_field-69865725">YES! I want the weekly <em>MurderBook</em> e&ndash;newsletter, too!</label>  -->
-
 			<label for="msg">What'ya got to say?</label>
 			<textarea name="msg" id="msg" cols="30" rows="10"></textarea>
 
-			<input type="submit" value="Send">
+			<input type="submit" value="Send my message">
 		</form>
-
-
-
 
 	</section>
 
