--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,9 @@
 <!-- MAIN NAVIGATION MENU -->
 
+    <!-- <div class="navicon__test toggle-menu menu-right">
+      <i class="fa fa-navicon"></i>
+    </div> -->
+
     <nav  class="nav__primary cbp-spmenu cbp-spmenu-vertical cbp-spmenu-right"> <!-- if {% if page.url == '/index.html' %} class="hidden" {% endif %} statement removes menu from home (eventually only WelcomeGate) page -->
       
       <h1 class="hidden">Main Navigation</h1>
