--- a/_includes/wgsalesletter.html
+++ b/_includes/wgsalesletter.html
@@ -28,28 +28,28 @@
   <div class="faketest">
     <ul class="clearfix">
       <li>
-        <blockquote class="faketest__bq"><i class="fa fa-quote-left fa-lg pull-left fa-border"></i>
+        <blockquote class="faketest__bq"><i class="fa fa-quote-left fa-lg pull-left"></i>
           <p>When I'm stuck trying to find a good murder method, I find inspiration at Tales of Murder.</p>
           <cite>E. A. Poe</cite>
         </blockquote>
       </li>
 
       <li>
-        <blockquote class="faketest__bq"><i class="fa fa-quote-left fa-lg pull-left fa-border"></i>
+        <blockquote class="faketest__bq"><i class="fa fa-quote-left fa-lg pull-left"></i>
           <p>Tales of Murder &hellip; its my source for the best in murder mystery literature.</p>
           <cite>A. Christie</cite>
         </blockquote>
       </li>
 
       <li>
-        <blockquote class="faketest__bq"><i class="fa fa-quote-left fa-lg pull-left fa-border"></i>
+        <blockquote class="faketest__bq"><i class="fa fa-quote-left fa-lg pull-left"></i>
           <p>The best murder mystery stories since, well, since my work.</p>
           <cite>A. C. Doyle</cite>
         </blockquote>
       </li>
 
     </ul>
-    <footer class="faketest__footer">All testimonials are fictional.<br>We just think they <em>would</em> have said these kind things if they'd had access to TalesofMurder.com</footer>
+    <footer class="faketest__footer">All testimonials are fictional. We just think they <em>would</em> have said these kind things if they'd had access to TalesofMurder.com</footer>
   </div> <!-- end div faketest -->
 
   <p>These fine mystery masters love our stories, so let me introduce you to their favorite cases of revenge&#8208; &amp; jealousy&#8208;inspired murder, greed and avarice like you’ve never seen on the page &hellip; from little old ladies solving genteel murders to hardened PIs fighting not only crime on their mean streets, but their own inner demons.</p>
