--- a/_layouts/post_combo.html
+++ b/_layouts/post_combo.html
@@ -48,13 +48,13 @@ layout: default
 	(3) if premium post && !localStorage[registered=true], then show div.pc-tease && include/show readmore.html 
 	-->
 
-	<div class="pc-tease hidden">
+	<div class="pc-tease grit hidden">
 		<h4><i class="fa fa-sign-in"></i>&nbsp;PREMIUM CONTENT</h4>
 		<h5>REGISTERED USERS ONLY</h5>
 		<p>Enjoy an online sample of <span>{{ page.title }}</span>. To read the full story, just register with a valid email address. You'll also be able to download either a PDF, Kindle or ePub version. Full details below the sample.</p>
 	</div> <!-- end div pc-tease -->
 		
-	<div class="cu-tease">
+	<div class="cu-tease grit">
 		<p><strong>PSST! Hey, buddy &hellip;</strong> did'ya know you can download <a href="#"><strong>{{ page.title }}</strong></a> for any ereader device (<em>Kindle, iBooks, etc.</em>) or as PDF &hellip; perfect for reading when you're not online but have time to kill! <strong>Look for the <a href="#ssactions_ID"><span>Download</span></a> buttons at the end of this story.</strong></p>
 	</div> <!-- end div cu-tease -->
 
