--- a/_assets/scss/partials/layout/_navigation.scss
+++ b/_assets/scss/partials/layout/_navigation.scss
@@ -44,16 +44,16 @@
 }
 
 .navicon {
-	border: 1px solid orange;
+	// border: 1px solid orange;
 	color: $paper;
 	@extend .h2;
-	font-size: 2.75rem;
+	font-size: 2.5rem;
 	margin: 0;
 	// padding: 2.25rem 0 0.25rem 0;
 	// font-size: 30px;
 	// float: right;
 	position: absolute;
-	top: 2rem;
+	top: 1.25rem;
 	right: 1.25rem;
 	@media screen and (min-width: 375px) {
 		position: absolute;
@@ -62,12 +62,12 @@
 	}
 	@media screen and (min-width: 410px) {
 		position: absolute;
-		top: 2rem;
+		top: 1.5rem;
 		right: 2rem;
 	}
-	// @media screen and (min-width: 701px) {
-	// 	display: none;
-	// }
+	@media screen and (min-width: 701px) {
+		display: none;
+	}
 }
 
 
