--- a/_assets/scss/partials/modules/_contact.scss
+++ b/_assets/scss/partials/modules/_contact.scss
@@ -48,12 +48,24 @@
 }
 
 .contact__form {
+	background-color: $acolor;
+	color: $paper;
+	// text-align: center;
+	padding: 0.5rem;
 	@media screen and (min-width: 400px) {
 		float: right;
 		width: 50%;
 		max-width: 320px;
 	}
-	
+	input[type="email"], input[type="text"], textarea {
+		background-color: $paper;
+	}
+	input[type="submit"] {
+		background-color: #727217;
+		border-radius: 5px;
+		width: 100%;
+		margin: 1rem 0 0.5rem 0;
+	}
 }
 
 .contact__address {
@@ -61,3 +73,17 @@
 	// border-radius: 10px;
 	// padding-right: 0.5rem;
 }
+
+.readmore__button__link {
+	color: $acolor;
+	text-align: center;
+	margin: 2rem auto 0 auto;
+}
+
+.thanks__contactform {
+	@extend .thanks__instructions;
+}
+
+
+
+
