--- a/_assets/scss/partials/modules/_faketest.scss
+++ b/_assets/scss/partials/modules/_faketest.scss
@@ -7,6 +7,7 @@
 	// margin: 0 auto;
 	// text-align: center;
 	li {
+		background-color: transparent;
 		@media screen and (min-width: 30rem) {
 			width: 33%;
 			float: left;
@@ -16,6 +17,7 @@
 
 .faketest__bq {
 	// border: 1px solid crimson;
+	background-color: transparent;
 	color: $pcolor;
 	font-size: 1.25rem;
 	font-style: italic;
@@ -34,7 +36,8 @@ cite {
 
 .faketest__footer {
 	font-size: small;
-	color: lighten($pcolor, 30);
+	color: lighten($pcolor, 15);
 	text-align: center;
-	margin-bottom: 2rem;
+	margin: 0 auto 2rem auto;
+	max-width: 330px;
 }
