--- a/_assets/scss/partials/utils/_tooltip.scss
+++ b/_assets/scss/partials/utils/_tooltip.scss
@@ -21,7 +21,7 @@
   $tooltip-distance-from-item: 3em;
   $tooltip-arrow-distance-from-box: -1.3em;
 
-  background: $tooltip-background;
+  background: transparent;
   border-radius: $base-border-radius;
   border: 1px solid $base-border-color;
   display: inline-block;
