--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -3,7 +3,7 @@
 <header class="site__header"> <!-- contains full width, resizing background image -->
 	<div class="container"> <!-- 960px width, centered content area -->
 
-		<div class="masthead clearfix">
+		<div class="masthead"> <!-- clearfix -->
 
 			<img src="/assets/img/circle_crow_paper.png" alt="" class="masthead__logo grit">
 
@@ -13,7 +13,7 @@
 				<h3 class="masthead__tagline">For readers with time to <span>kill</span> &hellip;</h3>
 			</div> <!-- end div .masthead-inner__test -->
 
-			<div class="navicon__test toggle-menu menu-right">
+			<div class="navicon toggle-menu menu-right">
       	<i class="fa fa-navicon"></i>
     	</div>
 
