--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1205,154 +1205,6 @@ dl {
   dl dd {
     margin: 0; }
 
-/* ==========================================================================
-   SCSS FOR INDEX_TEST.HTML
-   ========================================================================== */
-.site__header__test {
-  background: #242424 url("/assets/img/pulpicons2.svg") repeat-x;
-  color: white;
-  width: 100%;
-  margin: 0;
-  padding: 0; }
-
-.masthead__test {
-  width: 960px;
-  min-height: 75px;
-  max-height: 275px;
-  max-width: 100%;
-  margin: 0; }
-  @media screen and (min-width: 769px) {
-    .masthead__test {
-      margin: 0 0 0 6rem; } }
-  @media screen and (min-width: 700px) and (max-width: 736px) {
-    .masthead__test {
-      margin: 0 0 0 15rem; } }
-
-.masthead-inner__test {
-  padding: 1rem 0;
-  margin: 0 auto; }
-  @media screen and (min-width: 360px) {
-    .masthead-inner__test {
-      display: inline-block;
-      float: left;
-      text-align: center;
-      width: 230px; } }
-  @media screen and (min-width: 737px) {
-    .masthead-inner__test {
-      display: block;
-      width: 960px;
-      max-width: 100%; } }
-
-.nav__test {
-  background-color: darkblue; }
-
-.title__test {
-  float: left;
-  font-family: "nimbus-sans-condensed", sans-serif;
-  font-style: normal;
-  font-weight: 900;
-  color: #8B0000;
-  margin: 0 0 -1rem 10%; }
-  .title__test span.urde, .title__test span.m, .title__test span.r {
-    display: inline-block;
-    color: #8B0000;
-    text-transform: uppercase;
-    letter-spacing: -0.25rem;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: #444;
-    text-shadow: 2px 1px #a1a199;
-    /* #ccc */
-    -webkit-transform: rotate(-6deg) skew(-3deg, 0);
-    -ms-transform: rotate(-6deg) skew(-3deg, 0);
-    transform: rotate(-6deg) skew(-3deg, 0); }
-    @media screen and (min-width: 737px) {
-      .title__test span.urde, .title__test span.m, .title__test span.r {
-        font-size: 11rem;
-        letter-spacing: -8px;
-        text-shadow: 4px 3px #a1a199;
-        /* #ccc */ } }
-  .title__test span.m, .title__test span.r {
-    -webkit-transform: rotate(-5deg) skew(-5deg, 0);
-    -ms-transform: rotate(-5deg) skew(-5deg, 0);
-    transform: rotate(-5deg) skew(-5deg, 0); }
-  .title__test span.r {
-    letter-spacing: 4px; }
-  @media screen and (min-width: 737px) {
-    .title__test {
-      width: 900px;
-      margin: 0 auto;
-      padding: 0; } }
-
-.title-main__test {
-  font-size: 2.5rem;
-  text-transform: uppercase;
-  vertical-align: middle; }
-
-.title-sub__test {
-  font-family: "nimbus-sans-condensed", sans-serif;
-  font-size: 1.5rem;
-  color: #fffff0;
-  text-transform: initial; }
-  @media screen and (min-width: 737px) {
-    .title-sub__test {
-      display: block;
-      font-size: 4rem;
-      margin: 0 0 -5rem -8.5rem; } }
-
-.tagline__test {
-  display: none;
-  font-family: "nimbus-sans-condensed", sans-serif;
-  font-size: 1.25rem;
-  letter-spacing: 0.25px;
-  color: #fffff0; }
-  .tagline__test span {
-    color: #8B0000;
-    font-style: italic;
-    -webkit-text-stroke-width: 0.75px;
-    -webkit-text-stroke-color: #ccc;
-    text-shadow: 2px 1px #fffff0;
-    /* #ccc */ }
-  @media screen and (min-width: 737px) {
-    .tagline__test {
-      display: inline-block;
-      font-size: 2.5rem;
-      letter-spacing: 2px;
-      line-height: 1px;
-      position: relative;
-      top: -1.15rem;
-      left: -1.5rem;
-      font-weight: 900; } }
-
-.logo__test {
-  display: none;
-  width: 44px;
-  height: auto; }
-  @media screen and (min-width: 360px) {
-    .logo__test {
-      display: inline-block;
-      float: left;
-      position: relative;
-      top: 1rem;
-      left: 1rem; }
-      @media screen and (min-width: 737px) {
-        .logo__test {
-          display: inline;
-          position: static;
-          clear: both;
-          width: 125px;
-          margin: 5rem -25rem 0 3rem;
-          padding: 0; } } }
-
-.navicon__test {
-  color: #fffff0;
-  font-size: 2.75rem;
-  position: absolute;
-  top: 1.75rem;
-  right: 1.5rem; }
-  @media screen and (min-width: 701px) {
-    .navicon__test {
-      display: none; } }
-
 /*==========  MODULES  ==========*/
 /* ==========================================================================
    SLABTEXT.JS CSS
@@ -1831,8 +1683,8 @@ a.readmore {
    CONTENT UPGRADE
    ========================================================================== */
 .cu-tease {
-  border: 1px solid #c2c2c2;
-  background-color: #f5f5f5;
+  border: 1px solid #8B0000;
+  background-color: lightyellow;
   max-width: 600px;
   width: 90%;
   padding: 1rem;
@@ -2013,11 +1865,27 @@ a.readmore {
     float: left;
     width: 50%; } }
 
-@media screen and (min-width: 400px) {
-  .contact__form {
-    float: right;
-    width: 50%;
-    max-width: 320px; } }
+.contact__form {
+  background-color: #8B0000;
+  color: #fffff0;
+  padding: 0.5rem; }
+  @media screen and (min-width: 400px) {
+    .contact__form {
+      float: right;
+      width: 50%;
+      max-width: 320px; } }
+  .contact__form input[type="email"], .contact__form input[type="text"], .contact__form textarea {
+    background-color: #fffff0; }
+  .contact__form input[type="submit"] {
+    background-color: #727217;
+    border-radius: 5px;
+    width: 100%;
+    margin: 1rem 0 0.5rem 0; }
+
+.readmore__button__link {
+  color: #8B0000;
+  text-align: center;
+  margin: 2rem auto 0 auto; }
 
 /* ==========================================================================
    WELCOME GATE SALES LETTER
@@ -2062,12 +1930,15 @@ a.readmore {
 /* ==========================================================================
    FAKE TESTIMONIALS
    ========================================================================== */
-@media screen and (min-width: 30rem) {
-  .faketest li {
-    width: 33%;
-    float: left; } }
+.faketest li {
+  background-color: transparent; }
+  @media screen and (min-width: 30rem) {
+    .faketest li {
+      width: 33%;
+      float: left; } }
 
 .faketest__bq {
+  background-color: transparent;
   color: #474F55;
   font-size: 1.25rem;
   font-style: italic;
@@ -2082,9 +1953,10 @@ cite {
 
 .faketest__footer {
   font-size: small;
-  color: #919ca4;
+  color: #6a767f;
   text-align: center;
-  margin-bottom: 2rem; }
+  margin: 0 auto 2rem auto;
+  max-width: 330px; }
 
 /* ==========================================================================
    POST SHORT STORY ACTIONS - Bookmark, Share, Download, Embed, Read More
@@ -2272,7 +2144,7 @@ span.data-title:after {
 .thanks h3, .thanks h4 {
   color: #8B0000; }
 
-.thanks__instructions {
+.thanks__instructions, .thanks__contactform {
   margin: 3rem auto;
   width: 800px;
   max-width: 90%; }
@@ -2487,7 +2359,7 @@ body, caption, th, td, input, textarea, select, option, legend, fieldset, h1, .m
     /* equivalent to 22px */ }
  }
 
-h1, .manifesto h2, .policies h2, .terms h2, .contact h2, h2, h3, h4, h5, h6, .h1, .digestexplanation h2, .squeeze__tagline, .salesletter h2, .squeeze__byline, .salesletter h3, .bc__header h2, .h2, .navicon__test, .navicon, .squeeze__byline, .salesletter h3, .h3, .modal .modal-inner h2, .sectiontitle, .h4, .h5, .h6 {
+h1, .manifesto h2, .policies h2, .terms h2, .contact h2, h2, h3, h4, h5, h6, .h1, .digestexplanation h2, .squeeze__tagline, .salesletter h2, .squeeze__byline, .salesletter h3, .bc__header h2, .h2, .navicon, .squeeze__byline, .salesletter h3, .h3, .modal .modal-inner h2, .sectiontitle, .h4, .h5, .h6 {
   font-family: "Josefin Sans", sans-serif; }
 
 h1, .manifesto h2, .policies h2, .terms h2, .contact h2, .h1, .digestexplanation h2, .squeeze__tagline, .salesletter h2, .squeeze__byline, .salesletter h3, .bc__header h2 {
@@ -2511,21 +2383,21 @@ h1, .manifesto h2, .policies h2, .terms h2, .contact h2, .h1, .digestexplanation
     /* keep to a multiple of the 20px line height and something more appropriate for display headings */ }
  }
 
-h2, .h2, .navicon__test, .navicon, .squeeze__byline, .salesletter h3 {
+h2, .h2, .navicon, .squeeze__byline, .salesletter h3 {
   font-size: 1.625em;
   /* 1.625x body copy size = 26px */
   line-height: 1.15384615;
   /* 30px / 26px */ }
 
 @media (min-width: 43.75em) {
-  h2, .h2, .navicon__test, .navicon, .squeeze__byline, .salesletter h3 {
+  h2, .h2, .navicon, .squeeze__byline, .salesletter h3 {
     font-size: 2em;
     /* 2x body copy size = 32px */
     line-height: 1.25; }
  }
 
 @media (min-width: 56.25em) {
-  h2, .h2, .navicon__test, .navicon, .squeeze__byline, .salesletter h3 {
+  h2, .h2, .navicon, .squeeze__byline, .salesletter h3 {
     font-size: 2.25em;
     /* 2.25x body copy size = 36px */
     line-height: 1.25; }
@@ -2758,12 +2630,11 @@ blockquote {
       text-decoration: underline; }
 
 .navicon {
-  border: 1px solid orange;
   color: #fffff0;
-  font-size: 2.75rem;
+  font-size: 2.5rem;
   margin: 0;
   position: absolute;
-  top: 2rem;
+  top: 1.25rem;
   right: 1.25rem; }
   @media screen and (min-width: 375px) {
     .navicon {
@@ -2773,8 +2644,11 @@ blockquote {
   @media screen and (min-width: 410px) {
     .navicon {
       position: absolute;
-      top: 2rem;
+      top: 1.5rem;
       right: 2rem; } }
+  @media screen and (min-width: 701px) {
+    .navicon {
+      display: none; } }
 
 /*================================
 =            MAIN NAV            =
@@ -2944,10 +2818,11 @@ blockquote {
   max-width: 60rem; }
 
 .post__content {
-  background-color: #fff;
+  background-color: #fffff0;
+  border: 1px solid #8B0000;
   max-width: 37.5rem;
   margin: 0 auto;
-  padding: 0 1rem; }
+  padding: 1rem; }
 
 blockquote {
   color: #8B0000;
@@ -3101,8 +2976,8 @@ blockquote {
   font-weight: bold; }
 
 .pc-tease {
-  border: 1px solid #c2c2c2;
-  background-color: #f5f5f5;
+  border: 1px solid #8B0000;
+  background-color: lightyellow;
   max-width: 600px;
   width: 90%;
   padding: 1rem;
@@ -3323,6 +3198,7 @@ blockquote {
         padding-left: 1rem; } }
 
 .squeeze__headline {
+  border: 4px double #8B0000;
   background-color: lightyellow;
   color: #474F55;
   text-align: center;
@@ -3549,7 +3425,7 @@ blockquote {
     cursor: not-allowed; }
 
 .tooltip-item {
-  background: white;
+  background: transparent;
   border-radius: 3px;
   border: 1px solid white;
   display: inline-block;
@@ -3602,4 +3478,5 @@ blockquote {
       text-align: center;
       text-shadow: 0 2px 2px silver; }
 
+/*==========  TESTING  ==========*/
 /*# sourceMappingURL=styles.css.map */
