--- a/_assets/scss/partials/layout/_chapter.scss
+++ b/_assets/scss/partials/layout/_chapter.scss
@@ -18,6 +18,20 @@
 	// text-align: center;
 }
 
+/* ==========================================================================
+FIGURE OUT HOW TO TARGET **ONLY** THE CHAPTER TITLE AND MAKE **IT** BOLD!!
+
+ul#markdown-toc { 
+	font-weight: bold;
+}
+   
+   ========================================================================== */
+
+
+
+
+
+
 .btt {
 	text-align: right;
 	a {
