--- a/_includes/terms.html
+++ b/_includes/terms.html
@@ -31,7 +31,20 @@
 	<div class="faq">
 		<h3>FAQ</h3>
 		<h4>Have more questions? Check out our FAQ.</h4>
-		<p>[COMING SOON]</p>
+		<br>
+		<dl>
+			<h5>1. Genre Definitions</h5>
+			<dt>Cozy</dt>
+			<dd>(usually) amateur detectives &amp; genteel killers</dd>
+			<dt>Classic</dt>
+			<dd>golden age, classic Holmesian detectives, English manors</dd>
+			<dt>Noir</dt>
+			<dd>dark, violent; not necessarily any kind of professional sleuth</dd>
+		</dl>
+
+
+
+		<!-- <p>[COMING SOON]</p> -->
 	</div>
 
 	<footer class="policies__footer">
