--- a/_assets/scss/partials/modules/_animated_progbar.scss
+++ b/_assets/scss/partials/modules/_animated_progbar.scss
@@ -23,7 +23,7 @@ progress {
   height: 20px;
   margin-bottom: 20px;
   overflow: hidden;
-  background-color: /* #8c7070 */ #8b0000;
+  background-color: #8b0000;
   // border: 1px solid #665252;
   border-radius: 4px;
   // -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1);
