--- a/_assets/scss/partials/layout/_footer.scss
+++ b/_assets/scss/partials/layout/_footer.scss
@@ -7,7 +7,7 @@
 	text-align: center;
 	font-size: 1.1rem;
 	color: $paper;
-	background: $bgcolor url("/assets/img/footprints1.png") repeat-x;
+	background: $bgcolor url("/assets/img/footprints1a.png") repeat-x;
 	// min-height: 4.0625rem;
 	padding: 1rem;
 }
