--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -8,7 +8,7 @@
 			<!-- <img src="/assets/img/circle_crow_paper.png" alt="" class="masthead__logo grit"> -->
 
 			<div class="branding">
-				<img src="/assets/img/site_logo4.png" alt="" width="600px">
+				<img src="/assets/img/site_logo4a.png" alt="" width="600px">
 				<!-- <h2 class="masthead__title grit"><span class="title__sub">Tales of </span><span class="title__main"><span class="m">m</span><span class="urde">urde</span><span class="r">r</span></span></h2>
 
 				<h3 class="masthead__tagline">For readers with time to <span>kill</span> &hellip;</h3> -->
