--- a/_assets/scss/partials/layout/_page.scss
+++ b/_assets/scss/partials/layout/_page.scss
@@ -67,9 +67,13 @@
 	font-weight: bold;
 	line-height: 1.5;
 	text-align: center;
+	// max-width: 100%;
 	// font-style: italic;
 	div {
-		max-width: 600px;
+		max-width: 100%;
+		span {
+			text-transform: uppercase;
+		}
 	}
 }
 
