--- a/_includes/card.html
+++ b/_includes/card.html
@@ -13,10 +13,12 @@
 	<!-- <a href="{{ post.url }}"> -->
 		<li class="card">
 
-			<div class="card__header" style="background-image: url('{{ post.image }}')">
+			<div class="card__header" style="background-image: url('{{ post.image }}'); width: 100%;">
 
-			<!-- NOTE: style MUST be included for class="card__header" to allow the individual post's image to be dropped into as a background-image. Can't (don't know how!) to do it in the CSS stylesheet, so I put it in the HTML style. -->
-
+			<!-- NOTE: style in div tag (above) MUST be included for class="card__header" to allow the individual post's image to be dropped into as a background-image. Can't (don't know how!) to do it in the CSS stylesheet, so I put it in the HTML style. -->
+			
+				<p style="background-color:darkred;color:white;text-align:center;font-size:0.95rem;font-weight:800;box-shadow:5px 5px 5px #888;">{{ post.genre }}</p>
+			
 				<div class="card__ribbonwrapper">
 					<div class="card__ribbon">{{ post.genre }}</div> <!-- end of div card__ribbon -->
 				</div> <!-- end of div card__ribbonwrapper -->
@@ -24,6 +26,7 @@
 				<h2 class="card__meta">{{ post.title }} <span>{{ post.author }}</span></h2>
 				
 			</div> <!-- end div card__header -->
+			
 
 			<p>{{ post.excerpt | remove: '<p>' | remove: '</p>' }} <a href="{{ post.url }}" class="readmore">Read&nbsp;More&nbsp;&rsaquo;&rsaquo;</a> </p>
 
