--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="site__footer" id="site__footer">
   <div class="container">
-    <small><span class="rwd-line">Copyright 2014, Tales of Murder Press, LLC. </span>All Rights Reserved.</small>
+    <small><span class="rwd-line">Copyright 2014 &mdash; {{ site.time | date: '%Y' }} Tales&nbsp;of&nbsp;Murder&nbsp;Press,&nbsp;LLC. </span>All Rights Reserved.</small>
   </div>
 </footer>
