--- a/_assets/scss/partials/base/_base.scss
+++ b/_assets/scss/partials/base/_base.scss
@@ -99,9 +99,15 @@ a {
 }
 
 
+.uppercase {
+	text-transform: uppercase;
+}
 
-
-
+.inner-container {
+	text-transform: none;
+	width: 37.5rem;
+	margin: 0 auto;
+}
 
 
 
