--- a/_assets/scss/styles.scss
+++ b/_assets/scss/styles.scss
@@ -46,6 +46,7 @@
 @import 'partials/modules/panel';
 @import 'partials/modules/animated_progbar';
 @import 'partials/modules/premium-content';
+@import 'partials/modules/pagination';
 
 
 /*==========  LAYOUT  ==========*/
