--- a/_includes/card.html
+++ b/_includes/card.html
@@ -1,5 +1,5 @@
 <ul class="cards">
-	{% for post in site.posts %}
+	{% for post in paginator.posts %}
 
 		<!-- README IF STATEMENT -->
 	  {% if site.readtime %}
