--- a/_assets/scss/partials/layout/_page.scss
+++ b/_assets/scss/partials/layout/_page.scss
@@ -71,9 +71,9 @@
 	// font-style: italic;
 	div {
 		max-width: 100%;
-		span {
-			text-transform: uppercase;
-		}
+		// span {
+		// 	text-transform: uppercase;
+		// }
 	}
 }
 
