--- a/_assets/scss/partials/base/_base.scss
+++ b/_assets/scss/partials/base/_base.scss
@@ -31,7 +31,7 @@ body {
 	line-height: 1.25rem; /* equivalent to 20px */
 	font-family: $base-font-family;
 	color: $pcolor;
-	background-color: white;
+	background-color: $paper;
 }
 
 /**
