--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 	{% include masthead.html %}
 	{% include navigation.html %}
 
-  <main class="main" roll="main" style="height:100%;">
+  <main class="main" roll="main"> <!-- removed [style="height:100%;"] to correct ios9 browser height problem ... WHY!? -->
     <div class="content">
     	{{ content }}
     </div>
