font resize buttons

--- a/_assets/scss/partials/layout/_masthead.scss
+++ b/_assets/scss/partials/layout/_masthead.scss
@@ -21,9 +21,9 @@
 }
 
 .branding {
-	// border: 1px solid green;
+	border: 10px solid green;
 	margin-top: 2rem;
-	height: 350px;
+	height: auto;
 	width: 700px;
 	// display: inline;
 	// float: left;
