--- a/_assets/scss/styles.scss
+++ b/_assets/scss/styles.scss
@@ -47,6 +47,7 @@
 @import 'partials/modules/animated_progbar';
 @import 'partials/modules/premium-content';
 @import 'partials/modules/pagination';
+@import 'partials/modules/fontresizer';
 
 
 /*==========  LAYOUT  ==========*/
