--- a/_includes/premium_form.html
+++ b/_includes/premium_form.html
@@ -51,6 +51,8 @@
 </div> <!-- end div mc_embed_signup -->
 
 <script>
+// must have jquery loaded BEFORE this script or it errors out
+
 	$(document).ready(function(){
 		ajaxMailChimp.init($("#mc-embedded-subscribe-form"), $("#footer-subscribe-result"));
 
