--- a/_assets/scss/partials/base/_base.scss
+++ b/_assets/scss/partials/base/_base.scss
@@ -28,7 +28,7 @@ body {
 	flex-direction: column;
 	position: relative;
 	font-size: 100%; /* 1rem; ... equivalent to 16px */
-	line-height: 1.25rem; /* equivalent to 20px */
+	line-height: 1.25; /* equivalent to 20px */
 	font-family: $base-font-family;
 	color: $pcolor;
 	background-color: $paper;
