--- a/_assets/scss/partials/layout/_masthead2.scss
+++ b/_assets/scss/partials/layout/_masthead2.scss
@@ -13,9 +13,10 @@
 .masthead {
 	// border: 1px solid pink;
 	width: 960px;
+	max-width: 100%;
+	height: 245px;
 	min-height: 75px;
 	max-height: 275px;
-	max-width: 100%;
 	margin: 0 auto;
 	// @media screen and (min-width: 769px) {
 	// 	margin: 0 0 0 6rem;
@@ -38,7 +39,7 @@
 		width: 230px;
 	}
 	@media screen and (min-width: 737px) {
-		display: block;
+		// display: block;
 		width: 960px;
 		max-width: 100%;
 		margin: 0 auto;
