--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,6 +25,13 @@
     	<script src="_assets/js/vendor/respond.js"></script>
 		<![endif]-->
 		
+		<!--load jQuery, required-->
+		<script src="/assets/js/vendor/jquery-1.11.2.js"></script>
+
+		<script src="/assets/js/vendor/jquery-ui.min.js"></script>
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
+
 	</head>
 
 
