--- a/_layouts/post_combo.html
+++ b/_layouts/post_combo.html
@@ -59,8 +59,10 @@ layout: default
 	<div class="cu-tease grit">
 		<p><strong>PSST! Hey, buddy &hellip;</strong> did'ya know you can download <a href="#"><strong>{{ page.title }}</strong></a> for any ereader device (<em>Kindle, iBooks, etc.</em>) or as PDF &hellip; perfect for reading when you're not online but have time to kill! <strong>Look for the <a href="#ssactions_ID"><span>Download</span></a> buttons at the end of this story.</strong></p>
 	</div> <!-- end div cu-tease -->
+	
+		{% include fontresizer.html %}
 
-	<article class="post__content" id="resize">
+	<article class="post__content" id="story-main">
   	{{ content }}
   	{% include readmore.html %}
   </article>
