--- a/_assets/scss/styles.scss
+++ b/_assets/scss/styles.scss
@@ -12,6 +12,7 @@
 @import 'partials/vendor/base/base';
 @import 'partials/vendor/aweber/wg-form';
 @import 'partials/vendor/flickclockjs/flipclock';
+// @import 'partials/vendor/slicknav/slicknav';
 
 
 
