--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -15,7 +15,8 @@
 			</div> <!-- end div .masthead-inner__test -->
 
 			<div class="navicon toggle-menu menu-right">
-      	<i class="fa fa-navicon"></i>
+      	<!-- <i class="fa fa-navicon"></i> -->
+      	<h6 style="margin-top: 1.25rem;font-size: 1rem;"><i class="fa fa-navicon"></i> MENU</h6>
     	</div>
 
 		</div> <!-- end div .masthead__test -->
