--- a/_layouts/post_combo.html
+++ b/_layouts/post_combo.html
@@ -23,7 +23,7 @@ layout: default
 						<figcaption class="post__excerpt">{{ page.excerpt }}</figcaption>
 				</figure> <!-- end div post__image -->
 				<!-- <h2 class="post__excerpt">{{ page.excerpt }}</h4> -->
-			</div>
+			</div> <!-- end div titles -->
 		</div> <!-- end div clearfix -->
 
 		<div class="post__meta">
