--- a/_assets/scss/partials/layout/_jPushMenu.scss
+++ b/_assets/scss/partials/layout/_jPushMenu.scss
@@ -8,7 +8,9 @@
     .cbp-spmenu {
         background-color: rgba($bgcolor, 0.98);
         position: fixed;
-        height: 300px;
+        // height: 300px;
+        // max-width: 90%;
+        // width: 300px;
         // border-left: 3px solid $acolor;
         // border-right: 3px solid $acolor;
     }
@@ -24,32 +26,35 @@
 
     .cbp-spmenu a {
         display: block;
-        color: #fff;
-        text-decoration: underline;
-        text-decoration-style: dotted;
+        color: $paper;
+        text-transform: uppercase;
+        // text-decoration: underline;
+        // text-decoration-style: dotted;
         // border-bottom: 1px dotted #fff;
         // border-right: none;
         // font-size: 0.75em;
         font-weight: 300;
         height: 55px;
+        width: 5px;
     }
 
-    .cbp-spmenu a:hover {
-        background: darken($acolor, 10%);
-    }
+    // .cbp-spmenu a:hover {
+    //     background: darken($acolor, 10%);
+    // }
 
-    .cbp-spmenu a:active {
-        background: $acolor;
-        color: #fff;
-    }
+    // .cbp-spmenu a:active {
+    //     background: $acolor;
+    //     color: $paper;
+    // }
 
     /* Orientation-dependent styles for the content of the menu */
     .cbp-spmenu-vertical {
         width: 80%;
-        // height: 100%;
+        height: 100%;
         top: 0;
         z-index: 1000;
         overflow-y: scroll;
+        padding: 5rem 0 0 3rem;
     }
 
     .cbp-spmenu-vertical a {
@@ -58,7 +63,7 @@
     }
 
     .cbp-spmenu-horizontal {
-        width: 50%;
+        width: 25%;
         height: 50px;
         left: 0;
         z-index: 1000;
