--- a/_assets/scss/partials/layout/_masthead2.scss
+++ b/_assets/scss/partials/layout/_masthead2.scss
@@ -14,7 +14,6 @@
 	// border: 1px solid pink;
 	width: 960px;
 	max-width: 100%;
-	height: 245px;
 	min-height: 75px;
 	max-height: 275px;
 	margin: 0 auto;
@@ -24,6 +23,9 @@
 	// @media screen and (min-width: 700px) and (max-width: 736px) {
 	// 	margin: 0 0 0 15rem;
 	// }
+	@-moz-document url-prefix(){
+		height: 245px; /* must have a declared height for FF */
+	}
 }
 
 .branding {
