--- a/_assets/scss/partials/layout/_navigation.scss
+++ b/_assets/scss/partials/layout/_navigation.scss
@@ -3,17 +3,20 @@
    ========================================================================== */
 
 .nav__basic {
-	width: 700px;
 	// border: 1px dotted blue;
 	margin: -1rem auto 1rem auto;
 	padding: 0;
 	text-align: center;
 	list-style: none;
 	overflow: hidden;
+	@media screen and (min-width: 700px){
+			width: 700px;
+	}
 	.active {
 			font-weight: bold;
 			letter-spacing: 1px;
 			text-decoration: underline;
+			color: $acolor;
 			// border-bottom: 2px solid #fff; --> set instead of underline when using menu subheads
 		}
 	a {
